--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
-
 C:/Users/Suresh/Documents/ann/models/model.pt filter=lfs diff=lfs merge=lfs -text
 C:/Users/Suresh/Documents/ann/models/dinov2/pytorch_model.bin filter=lfs diff=lfs merge=lfs -text
+models/model.pt filter=lfs diff=lfs merge=lfs -text
+models/dinov2/pytorch_model.bin filter=lfs diff=lfs merge=lfs -text
