--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
+# Core Framework
 streamlit>=1.28.0
+
+# Deep Learning
 torch>=2.0.0
 torchvision>=0.15.0
+transformers>=4.30.0
+
+# Image Processing
 Pillow>=10.0.0
+opencv-python>=4.8.0
+
+# Data Processing
 numpy>=1.24.0
+scikit-learn>=1.3.0
+
+# Utilities
 tqdm>=4.65.0
