--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ transformers>=4.30.0
 
 # Image Processing
 Pillow>=10.0.0
-opencv-python>=4.8.0
+opencv-python-headless>=4.8.0
 
 # Data Processing
 numpy>=1.24.0
